--- a/Navty/Podfile
+++ b/Navty/Podfile
@@ -11,7 +11,7 @@ target 'Navty' do
   pod 'Firebase/Auth'
   pod 'Firebase/Storage'
   pod 'Firebase/Database'
-  pod 'Mapbox-iOS-SDK', '~> 3.3.7'
+  pod 'GoogleMaps'
   pod 'SideMenu'
 
 end
